try to fix alignment into ie8

--- a/upwork/fourth/css/base.css
+++ b/upwork/fourth/css/base.css
@@ -217,6 +217,9 @@ table tbody tr td:first-child p{
 	width: 40%;
 	margin-left: 30%;
 }
+input[type="number"]{
+	background-color: transparent;
+}
 /* end of page 2*/
 /*page 3*/
 .new-estratigy{
